--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="https://unpkg.com/bpmn-js@8.2.2/dist/assets/bpmn-font/css/bpmn.css" />
 </head>
 <body>
-    <!--<div id="app"></div>-->
+    <!-- <div id="app"></div> -->
     <script src="js/chunk-vendors.7f449584.js"></script>
     <script src="js/app.a5ff06ec.js"></script>
     <div id="canvas"></div>
     <script src="https://unpkg.com/jquery@3.3.1/dist/jquery.js"></script>
     <script src="https://unpkg.com/bpmn-js@8.2.2/dist/bpmn-modeler.development.js"></script>
-    <script src="C:\Users\ciaro\source\repos\final-year-project\vue-bpmn-app\wwwroot\js\test.js"></script>
+    <script src="js/test.js"></script>
 </body>
 </html>
